tests/testData/annotation/missing_task_declaration.wdl
workflow noTask {
    call <error descr="No task declaration found for 'someNonExistentTask'">someNonExistentTask</error>
}
